k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aboa
  labels:
    name: aboa
    app: aboa-system
